@@ -1246,6 +1246,8 @@ public class Options extends OptionsBase {
         +padVal("jj.lp", "Local packer: minimizes number of locals")
         +padVal("jj.ne", "Nop eliminator")
         +padVal("jj.uce", "Unreachable code eliminator")
+        +padOpt("wsop", "Whole Jimple Pre-processing Pack")
+        +padOpt("wsop", "Whole Shimple Pre-processing Pack")
         +padOpt("cg", "Call graph constructor")
         +padVal("cg.cha", "Builds call graph using Class Hierarchy Analysis")
         +padVal("cg.spark", "Spark points-to analysis framework")
@@ -1509,6 +1511,18 @@ public class Options extends OptionsBase {
                 "\nThe Unreachable Code Eliminator removes unreachable code and \ntraps whose catch blocks are empty. "
                 +"\n\nRecognized options (with default values):\n"
                 +padOpt( "enabled (true)", "" );
+    
+        if( phaseName.equals( "wsop" ) )
+            return "Phase "+phaseName+":\n"+
+                "\nThis pack allows you to insert pre-processors that are run \nbefore call-graph construction. Only enabled in whole-program \nmode. In an unmodified copy of Soot, this pack is empty."
+                +"\n\nRecognized options (with default values):\n"
+                +padOpt( "enabled (false)", "" );
+    
+        if( phaseName.equals( "wsop" ) )
+            return "Phase "+phaseName+":\n"+
+                "\nThis pack allows you to insert pre-processors that are run \nbefore call-graph construction. Only enabled in whole-program \nShimple mode. In an unmodified copy of Soot, this pack is empty."
+                +"\n\nRecognized options (with default values):\n"
+                +padOpt( "enabled (false)", "" );
     
         if( phaseName.equals( "cg" ) )
             return "Phase "+phaseName+":\n"+
@@ -2427,6 +2441,14 @@ public class Options extends OptionsBase {
             return ""
                 +"enabled ";
     
+        if( phaseName.equals( "wsop" ) )
+            return ""
+                +"enabled ";
+    
+        if( phaseName.equals( "wsop" ) )
+            return ""
+                +"enabled ";
+    
         if( phaseName.equals( "cg" ) )
             return ""
                 +"enabled "
@@ -3012,6 +3034,14 @@ public class Options extends OptionsBase {
             return ""
               +"enabled:true ";
     
+        if( phaseName.equals( "wsop" ) )
+            return ""
+              +"enabled:false ";
+    
+        if( phaseName.equals( "wsop" ) )
+            return ""
+              +"enabled:false ";
+    
         if( phaseName.equals( "cg" ) )
             return ""
               +"enabled:true "
@@ -3493,6 +3523,8 @@ public class Options extends OptionsBase {
         if( phaseName.equals( "jj.lp" ) ) return;
         if( phaseName.equals( "jj.ne" ) ) return;
         if( phaseName.equals( "jj.uce" ) ) return;
+        if( phaseName.equals( "wsop" ) ) return;
+        if( phaseName.equals( "wsop" ) ) return;
         if( phaseName.equals( "cg" ) ) return;
         if( phaseName.equals( "cg.cha" ) ) return;
         if( phaseName.equals( "cg.spark" ) ) return;
@@ -3629,6 +3661,10 @@ public class Options extends OptionsBase {
             G.v().out.println( "Warning: Options exist for non-existent phase jj.ne" );
         if( !PackManager.v().hasPhase( "jj.uce" ) )
             G.v().out.println( "Warning: Options exist for non-existent phase jj.uce" );
+        if( !PackManager.v().hasPhase( "wsop" ) )
+            G.v().out.println( "Warning: Options exist for non-existent phase wsop" );
+        if( !PackManager.v().hasPhase( "wsop" ) )
+            G.v().out.println( "Warning: Options exist for non-existent phase wsop" );
         if( !PackManager.v().hasPhase( "cg" ) )
             G.v().out.println( "Warning: Options exist for non-existent phase cg" );
         if( !PackManager.v().hasPhase( "cg.cha" ) )
